2022-08-05  Luigi Scarso <luigi.scarso@gmail.com> 
     * Fixed a missed lua_settop in lua_appendtovlist_callback() (thanks to Hironori KITAGAWA)

2022-07-31  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed loading .tex when  --output-directory is enabled

2022-07-30  Luigi Scarso <luigi.scarso@gmail.com>
    * Backtrack replace pointer when successive disc in exceptions  (H.Hagen)

2022-07-30  Luigi Scarso <luigi.scarso@gmail.com>
    * Take exception pre/port disc font from wordstart (H.Hagen)

2022-05-23  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed mp_begin_iteration (H.Hagen)

2022-05-15  Luigi Scarso <luigi.scarso@gmail.com>
    * Fixed a memory leak in mplib (H.Hagen)

2022-04-26  Luigi Scarso <luigi.scarso@gmail.com>
    * \mathitalicsmode=2 (enforce old school fonts italics code path) (H.Hagen)

2022-04-25  Luigi Scarso <luigi.scarso@gmail.com>
    * kpse find_file and lookup also search in --output-directory

2022-04-21  Luigi Scarso <luigi.scarso@gmail.com>
    * Wrong array size extended node_fields_whatsit_pdf_action (HH)

2022-04-18 Luigi Scarso <luigi.scarso@gmail.com>
    * Fix for Bug: Null-byte in csname not handled correctly (thanks to H. Menke)

2022-04-13 Luigi Scarso <luigi.scarso@gmail.com>
    * Make require return an error for ffi without shell-escape (H. Menke)

2022-04-12  Luigi Scarso <luigi.scarso@gmail.com>
    * Fix for 'Bug: attempt to double-free kern node'; 
      restore safeguard math (HH). Thanks to H. Menke

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-10 Luigi Scarso <luigi.scarso@gmail.com>
    *  -[no-]parse-first-line is now an unrecognized option (thanks to K.Berry)

2022-02-28 Luigi Scarso <luigi.scarso@gmail.com>
    * pass node to latelua function call (H.Hagen)

2022-02-27 Luigi Scarso <luigi.scarso@gmail.com>
    * Development id also with --version.

2022-02-26 Luigi Scarso <luigi.scarso@gmail.com>
    * write xformattributes and xformresources  (thanks to E. Renkema)
